@@ -14,8 +14,10 @@ gcl (2.6.2-1) unstable; urgency=low
   * installed tcl/tk patch for mingw
   * Fix banner license detection code in lsp/gcl_mislib.lsp as
     8features* entries are now keywords
+  * o/makefile changes to work around trailing slash -I arguments gcc
+    bug on mingw
 
- -- Camm Maguire <camm@enhanced.com>  Sat,  5 Jun 2004 18:14:44 +0000
+ -- Camm Maguire <camm@enhanced.com>  Sat,  5 Jun 2004 18:16:20 +0000
 
 gcl (2.6.1-39) unstable; urgency=high
 
